# serde_rusqlite

./: .gitignore  .travis.yml  Cargo.toml  README.md  release.toml
.github/workflows/: serde_rusqlite.yml
src/: de.rs  error.rs  lib.rs  tests.rs
src/de/: iter.rs  mod.rs
src/ser/: blob.rs  mod.rs  named.rs  positional.rs  slice.rs  tosql.rs
tests/: tests.rs
tools/: pre-release.sh
