[package]
name = "serde_rusqlite"
version = "0.39.3"
edition = "2021"
rust-version = "1.56"
description = "Serialize/deserialize rusqlite rows"
keywords = ["serde", "sqlite", "rusqlite", "serialization", "deserialization"]
categories = ["database", "encoding"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/serde_rusqlite"
repository = "https://github.com/twistedfall/serde_rusqlite"
exclude = ["/.github", "/tools", "/Cargo.lock", ".gitignore", "README.tpl", "release.toml", "rustfmt.toml"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rusqlite = "0.37"
serde = "1"

[dev-dependencies]
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
