[package]
name = "serde_rusqlite"
version = "0.41.0"
edition = "2021"
rust-version = "1.82.0"
description = "Serialize/deserialize rusqlite rows"
keywords = ["serde", "sqlite", "rusqlite", "serialization", "deserialization"]
categories = ["database", "encoding"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/serde_rusqlite"
repository = "https://github.com/twistedfall/serde_rusqlite"
exclude = ["/.github", "/tools", "/Cargo.lock", ".gitignore", "README.tpl", "release.toml", "rustfmt.toml"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
rusqlite_fallible_uint = ["rusqlite/fallible_uint"]

[dependencies]
rusqlite = "0.38"
serde_core = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
